[package]
name = "rskill"
version = "0.3.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/xsadia/rskill"
repository = "https://github.com/xsadia/rskill"
categories = ["command-line-utilities"]
authors = ["Felipe Rosa <felipe.rosa.arthur27@gmail.com>"]
description = "npkill like cli utility for removing node_modules"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = "0.28.1"
fs_extra = "1.3.0"
ratatui = "0.29.0"
rayon = "1.10.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
